cabal-version: >=1.10
name: marlowe-hspec
version: 0.1.0.0
license: Apache-2.0
license-files:
  LICENSE
  NOTICE
author: David Smith
category: Test
build-type: Simple
extra-source-files:
    README.md

source-repository head
    type: git
    location: https://github.com/iohk/plutus

library
    exposed-modules:
        Test.Hspec.Marlowe
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends:
        base >=4.7 && <5,
        HUnit -any,
        hspec-expectations -any,
        marlowe -any,
        marlowe-symbolic -any

test-suite marlowe-hspec-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: test
    default-language: Haskell2010
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base -any,
        hspec -any,
        HUnit -any,
        marlowe -any,
        marlowe-hspec -any
