cabal-version: >=1.10
name: marlowe-playground-server
version: 0.1.0.0
license: Apache-2.0
license-files:
  LICENSE
  NOTICE
author: Pablo Lamela
category: Web
build-type: Simple
extra-source-files:
    README.md

source-repository head
    type: git
    location: https://github.com/iohk/plutus

library
    exposed-modules:
        Server
        API
        Lambda
        Marlowe.Contracts
        Marlowe.Config
    -- Include 'contracts' so haskell.nix knows to include the files that we embed with TH
    hs-source-dirs:
        src
        contracts
    default-language: Haskell2010
    build-depends:
        aeson -any,
        base >=4.7 && <5,
        bytestring -any,
        bytestring -any,
        containers -any,
        cookie -any,
        directory -any,
        exceptions -any,
        file-embed -any,
        aws-lambda-haskell-runtime -any,
        aws-lambda-haskell-runtime-wai -any,
        filepath -any,
        http-client -any,
        http-client-tls -any,
        http-conduit -any,
        http-types -any,
        playground-common -any,
        jwt -any,
        lens -any,
        marlowe -any,
        marlowe-symbolic -any,
        marlowe-actus -any,
        monad-logger -any,
        mtl -any,
        newtype-generics -any,
        process -any,
        servant >= 0.16,
        servant-client -any,
        servant-client-core -any,
        servant-purescript -any,
        servant-server -any,
        stm -any,
        temporary -any,
        text -any,
        time -any,
        time-units -any,
        transformers -any,
        unordered-containers,
        wai-cors -any,
        uuid -any,
        validation -any

executable marlowe-playground-server
    main-is: Main.hs
    other-modules:
        Webserver
        PSGenerator
        Types
        Escrow
        EscrowWithCollateral
        Example
        CouponBondGuaranteed
        ZeroCouponBond
        Swap
        Option
        ContractForDifference
    hs-source-dirs: app contracts
    default-language: Haskell2010
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
    build-depends:
        aeson -any,
        base -any,
        bytestring -any,
        containers -any,
        data-default-class -any,
        directory -any,
        filepath -any,
        http-client -any,
        http-client-tls -any,
        http-types -any,
        playground-common -any,
        lens -any,
        marlowe -any,
        marlowe-playground-server -any,
        marlowe-symbolic -any,
        marlowe-actus -any,
        monad-logger -any,
        mtl -any,
        plutus-ledger,
        plutus-tx,
        prometheus >=2,
        purescript-bridge -any,
        optparse-applicative -any,
        servant-client -any,
        servant-foreign -any,
        servant-server -any,
        servant-purescript -any,
        text -any,
        wai -any,
        wai-cors -any,
        wai-extra -any,
        warp -any,
        web-ghc -any,
        yaml -any,
        time -any

test-suite marlowe-playground-server-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: test
    default-language: Haskell2010
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base -any
