name:                   marlowe-symbolic
version:                0.3.0.0
license:                BSD3
license-file:           LICENSE
author:                 Alexander Nemish
maintainer:             alexander.nemish@iohk.io
build-type:             Simple
extra-source-files:     README.md
cabal-version:          >= 1.10

library
    exposed-modules:
        App
        Marlowe.Symbolic.Types.Request
        Marlowe.Symbolic.Types.Response
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends:      aeson >= 1.4.2.0,
                        aws-lambda-haskell-runtime >= 2.0.1,
                        base >=4.9,
                        http-client,
                        http-client-tls,
                        marlowe,
                        containers,
                        plutus-tx,
                        plutus-ledger,
                        process,
                        servant,
                        servant-client -any,
                        template-haskell,
                        utf8-string,
                        wl-pprint
