name:                   marlowe-symbolic
version:                0.3.0.0
license:                BSD3
license-file:           LICENSE
author:                 Alexander Nemish
maintainer:             alexander.nemish@iohk.io
build-type:             Simple
extra-source-files:     README.md
cabal-version:          >= 1.10

library
    exposed-modules:
        Marlowe.Symbolic.Server
        Marlowe.Symbolic.Types.Request
        Marlowe.Symbolic.Types.Response
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends:      aeson -any,
                        base >=4.9,
                        deriving-aeson -any,
                        http-client,
                        http-client-tls,
                        marlowe,
                        containers,
                        plutus-tx,
                        plutus-ledger,
                        process,
                        servant,
                        servant-client -any,
                        servant-server -any,
                        template-haskell,
                        text -any,
                        utf8-string,
                        wl-pprint
