cabal-version: 2.0
name: marlowe
version: 0.1.0.0
license: Apache-2.0
license-files:
  LICENSE
  NOTICE
build-type: Simple
maintainer: alexander.nemish@iohk.io
stability: experimental
author: Alexander Nemish
synopsis:
  Marlowe: financial contracts on Cardano Computation Layer
description:
  A reference implementation of Marlowe, domain-specific language targeted at
  the execution of financial contracts in the style of Peyton Jones et al
  on Cardano Computation Layer.
category: Language
extra-doc-files: README.md

source-repository head
  type: git
  location: https://github.com/input-output-hk/plutus

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

library
  hs-source-dirs: src
  build-depends:
    aeson -any,
    base -any,
    bytestring,
    containers -any,
    deriving-aeson -any,
    lens,
    mtl,
    newtype-generics,
    template-haskell -any,
    plutus-tx -any,
    plutus-contract -any,
    plutus-core,
    plutus-ledger,
    text,
    vector,
    sbv >= 8.4,
    scientific -any,
    wl-pprint -any,
    freer-simple -any
  default-language: Haskell2010
  default-extensions: ExplicitForAll ScopedTypeVariables
                      DeriveGeneric StandaloneDeriving DeriveLift
                      DeriveFunctor DeriveFoldable
                      DeriveTraversable
  exposed-modules:
    Language.Marlowe
    Language.Marlowe.Semantics
    Language.Marlowe.Client
    Language.Marlowe.Util
    Language.Marlowe.Pretty
    Language.Marlowe.Analysis.FSSemantics
  other-modules:
  ghc-options:
    -Wall -Wnoncanonical-monad-instances
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities
    -pgmL unlit -optL--ghc -optL--language=haskell -optL--from=asciidoc

  if !(impl(ghcjs) || os(ghcjs))
    build-depends: plutus-tx-plugin -any

  if flag(defer-plugin-errors)
    ghc-options: -fplugin-opt Language.PlutusTx.Plugin:defer-errors
  build-tool-depends: unlit:unlit -any

test-suite marlowe-test
    default-language: Haskell2010
    hs-source-dirs: test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    other-modules:
      -- Spec.Common
        Spec.Marlowe.Common
        Spec.Marlowe.Marlowe
      -- Spec.Actus
    build-depends:
        aeson -any,
        base >=4.9 && <5,
        containers -any,
        hint -any,
        lens -any,
        memory -any,
        bytestring -any,
        freer-simple -any,
        tasty -any,
        tasty-hunit -any,
        tasty-quickcheck,
        text -any,
        serialise,
        cborg,
        plutus-ledger -any,
        plutus-contract -any,
        marlowe,
        sbv >= 8.4,
        plutus-tx -any,
        QuickCheck,
        template-haskell -any
  ghc-options:
    -Wall -Wnoncanonical-monad-instances
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities
