cabal-version: 2.2
name: marlowe
version: 0.1.0.0
license: Apache-2.0
license-files:
  LICENSE
  NOTICE
build-type: Simple
maintainer: alexander.nemish@iohk.io
stability: experimental
author: Alexander Nemish
synopsis:
  Marlowe: financial contracts on Cardano Computation Layer
description:
  A reference implementation of Marlowe, domain-specific language targeted at
  the execution of financial contracts in the style of Peyton Jones et al
  on Cardano Computation Layer.
category: Language
extra-doc-files: README.md

source-repository head
  type: git
  location: https://github.com/input-output-hk/plutus

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

common lang
  default-language: Haskell2010
  default-extensions: ExplicitForAll ScopedTypeVariables
                      DeriveGeneric StandaloneDeriving DeriveLift
                      DeriveFunctor DeriveFoldable
                      DeriveTraversable
  ghc-options:
    -Wall -Wnoncanonical-monad-instances
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

  if flag(defer-plugin-errors)
    ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

library
  import: lang
  hs-source-dirs: src
  ghc-options:
    -Wunused-packages
  build-depends:
    aeson -any,
    base -any,
    bytestring,
    containers -any,
    data-default -any,
    deriving-aeson -any,
    lens,
    mtl,
    newtype-generics,
    template-haskell -any,
    plutus-chain-index -any,
    plutus-contract -any,
    plutus-core,
    plutus-ledger,
    plutus-tx -any,
    plutus-use-cases,
    text,
    vector,
    sbv >= 8.4,
    scientific -any,
    wl-pprint -any,
    freer-simple -any,
    semigroups -any
  if !(impl(ghcjs) || os(ghcjs))
    build-depends: plutus-tx-plugin -any
  exposed-modules:
    Language.Marlowe
    Language.Marlowe.Extended
    Language.Marlowe.Semantics
    Language.Marlowe.Client
    Language.Marlowe.Util
    Language.Marlowe.Pretty
    Language.Marlowe.Analysis.FSSemantics
  other-modules:

test-suite marlowe-test-long-running
    import: lang
    hs-source-dirs:
      test
      pab
    type: exitcode-stdio-1.0
    main-is: SpecLongRunning.hs
    other-modules:
        Spec.PAB.Workflow
        MarloweContract
    build-depends:
        aeson -any,
        base >=4.9 && <5,
        containers -any,
        data-default  -any,
        hint -any,
        lens -any,
        bytestring -any,
        freer-simple -any,
        tasty -any,
        tasty-hunit -any,
        tasty-quickcheck,
        text -any,
        serialise,
        cborg,
        plutus-chain-index -any,
        plutus-contract -any,
        plutus-ledger -any,
        marlowe,
        plutus-tx -any,
        QuickCheck,
        template-haskell -any,
        streaming -any,
        plutus-pab -any,
        async -any,
        prettyprinter -any,
        purescript-bridge -any,
        servant-client -any,
        http-client -any,
        websockets -any,
        network -any,

test-suite marlowe-test
    import: lang
    hs-source-dirs:
      test
      pab
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    other-modules:
        Spec.Marlowe.Common
        Spec.Marlowe.Marlowe
        Spec.Marlowe.AutoExecute
        MarloweContract
    build-depends:
        aeson -any,
        base >=4.9 && <5,
        containers -any,
        data-default  -any,
        hint -any,
        lens -any,
        bytestring -any,
        freer-simple -any,
        tasty -any,
        tasty-hunit -any,
        tasty-quickcheck,
        text -any,
        serialise,
        cborg,
        plutus-chain-index -any,
        plutus-contract -any,
        plutus-ledger -any,
        marlowe,
        plutus-tx -any,
        QuickCheck,
        template-haskell -any,
        streaming -any,
        plutus-pab -any,
        async -any,
        prettyprinter -any,
        purescript-bridge -any,
        servant-client -any,
        http-client -any,
        websockets -any,
        network -any,

-- | The PAB Specialised to the marlowe contract(s)
executable marlowe-pab
  import: lang
  main-is: Main.hs
  hs-source-dirs: pab
  ghc-options:
    -threaded
  other-modules:
    MarloweContract
  build-depends:
    base >= 4.9 && < 5,
    aeson -any,
    containers -any,
    data-default -any,
    freer-simple -any,
    prettyprinter -any,
    freer-extras -any,
    plutus-contract -any,
    plutus-ledger -any,
    plutus-pab -any,
    plutus-tx -any,
    purescript-bridge -any,
    marlowe -any,
  if !(impl(ghcjs) || os(ghcjs))
    build-depends: plutus-tx-plugin -any
